# toolchain-oss

./: .dockerignore  .envrc  .envrc.arch-linux  .envrc.macos  .gitattributes  .gitignore  .mailmap  BUILD  CLAUDE.md  README.md  SETUP.md  pants.ci.toml  pants.localdev.toml  pants.toml  pants_from_sources  pyproject.toml  python  setup.sh
.circleci_old/: config.yml  main_config.yml
.github/: codecov.yml
.github/workflows/: buildbox-release.yml  check-toolchain-token.yml  check-upstream-scripts.yml  node-js-ci.yml  pacakges-audit.yml  packages-audit.yml  rust-ci.yml  terraform-providers-upgrade.yml  test-buildsense-integration.yml  upgrade-python-reqs.yml
build-support/checkstyle/: coding_style.xml  suppressions.xml
build-support/docker/: hadolint.yaml
build-support/eslint/: .eslintrc  package.json
build-support/preambles/: config.yaml
build-support/python/: bandit.yaml  flake8  mypy.ini  pylintrc
docs/: RUNBOOK.md  blocking_scans.md  ci.md  devbox.md  kubernetes.md  oncall.md  self_service_onboarding.md  shared_milestones.md
docs/docsite/: getting_started.md  remote_execution.md
docs/remoting/: cache.md  debugging.md  execution.md  life-of-a-request.md  proxy-server.md  redis-prod.md  storage-server.md
prod/: GoogleAuth.md  README.md  VPN.md
prod/docker/: README.md
prod/docker/ci/: Dockerfile.devops  Dockerfile.pants  README.md  build-devops.sh  build-pants.sh  pants-reqs.in  requirements.txt  update-pants-reqs.sh
prod/docker/django/: build_nginx.sh
prod/docker/pex-wrapper/: Dockerfile  Dockerfile.postgres
prod/docker/remoting/: BUILD  versions.sh
prod/helm/: .gitignore  BUILD  END2ENDTESTING.md  README.md  build_and_install_prod.sh  install_dev.sh  install_prod.sh
prod/helm/aws/: test.sh
prod/helm/dev-support/: test.sh
prod/helm/devops/: test.sh
prod/helm/observability/: test.sh
prod/helm/services/: test_python_services.sh
prod/helm/tools/: install_influxdb_buildsense_dev.sh  install_influxdb_prod.sh  test.sh
prod/kubernetes/: README.md  dev_namespace_setup.sh  kubectl_setup.sh
prod/kubernetes/init/: README.md
prod/kubernetes/secrets/: aws_secret_to_k8s_secret.sh
prod/opensearch/: README.md
prod/packer/: validate.sh
prod/packer/devbox/: README.md  aws-ami.pkr.hcl  build.pkr.hcl  vbox-ubuntu2004.pkr.hcl  vbox.pkr.hcl
prod/packer/eks-ubuntu/: README.md  aws-ami.pkr.hcl  build.pkr.hcl  update.sh  variables.pkr.hcl  versions.pkr.hcl
prod/python/toolchain_dev/: deploy_es_lambda.sh  upload_plugin_to_pypi.sh
prod/python/toolchain_prod/: deploy_es_lambda.sh
prod/terraform/: .gitignore  README.md  check.sh
prod/terraform/modules/: README.md
prod/terraform/resources/: README.md  terraform_all.sh  terraform_list.sh  upgrade_providers.sh
src/node/: package.json
src/python/curator/: BUILD  __init__.py  _version.py  actions.py  exceptions.py  indexlist.py  snapshotlist.py  utils.py
src/python/toolchain/: BUILD  conftest.py  constants.py  constants_test.py  strip_headers.py  testing_db.py
src/rust/: Cargo.toml
src/rust/.cargo/: config
src/rust/digest/: Cargo.toml
src/rust/digest/src/: lib.rs
src/rust/execution/: Cargo.toml
src/rust/execution/src/: lib.rs
src/rust/execution/src/api/: bots_service.rs  capabilities_service.rs  execution_service.rs  mod.rs  operations_service.rs
src/rust/execution/src/server/: mod.rs  tests.rs
src/rust/execution_server/: Cargo.toml
src/rust/execution_server/src/: config.rs  main.rs
src/rust/execution_util/: Cargo.toml
src/rust/execution_util/src/: lib.rs
src/rust/grpc_util/: Cargo.toml
src/rust/grpc_util/src/: auth.rs  backend.rs  hyper.rs  infra.rs  lib.rs  logging.rs  retry.rs  secrets.rs  sentry.rs
src/rust/grpc_util/src/services/: grpc_metrics.rs  http_metrics.rs  mod.rs
src/rust/protos/: Cargo.toml  build.rs
src/rust/protos/protos/bazelbuild_remote-apis/: README.md
src/rust/protos/protos/googleapis/: README.md
src/rust/protos/protos/googleapis/google/api/: annotations.proto  client.proto  field_behavior.proto  http.proto  resource.proto
src/rust/protos/protos/googleapis/google/bytestream/: bytestream.proto
src/rust/protos/protos/googleapis/google/devtools/remoteworkers/v1test2/: bots.proto  command.proto  worker.proto
src/rust/protos/protos/googleapis/google/longrunning/: operations.proto
src/rust/protos/protos/googleapis/google/rpc/: code.proto  error_details.proto  status.proto
src/rust/protos/protos/standard/: README.md
src/rust/protos/protos/standard/google/protobuf/: any.proto  api.proto  descriptor.proto  duration.proto  empty.proto  field_mask.proto  source_context.proto  struct.proto  timestamp.proto  type.proto  wrappers.proto
src/rust/protos/src/: lib.rs  tests.rs
src/rust/proxy/: Cargo.toml
src/rust/proxy/src/: lib.rs
src/rust/proxy/src/server/: action_cache_service.rs  bots_service.rs  byte_stream_service.rs  capabilities_service.rs  cas_service.rs  execution_service.rs  mod.rs  operations_service.rs  tests.rs
src/rust/proxy_server/: Cargo.toml
src/rust/proxy_server/src/: auth_setup.rs  config.rs  main.rs
src/rust/storage/: Cargo.toml  build.rs
src/rust/storage/protos/: redis.proto
src/rust/storage/src/: bytes.rs  lib.rs  testutil.rs  uuid_gen.rs
src/rust/storage/src/api/: action_cache_service.rs  byte_stream_service.rs  capabilities_service.rs  cas_service.rs  mod.rs  sync_wrapper.rs  tests.rs
src/rust/storage/src/driver/: always_errors.rs  chunking.rs  dark_launch.rs  digest_verifier.rs  error.rs  existence_cache.rs  fast_slow.rs  file_backed.rs  memory.rs  metering.rs  metrics.rs  mod.rs  null.rs  sharding.rs  size_split.rs  small.rs
src/rust/storage/src/driver/redis/: chunked.rs  common.rs  direct.rs  mod.rs  pool.rs  testutil.rs  traits.rs
src/rust/storage_server/: Cargo.toml
src/rust/storage_server/src/: config.rs  main.rs
src/rust/storage_server/tests/: redis.rs
src/rust/storage_server/tests/common/: mod.rs
src/rust/worker/: Cargo.toml
src/rust/worker/src/: lib.rs  main.rs
src/sh/ci/: django-checks.sh  ensure-toolchain-image.sh  get-pants-version.sh  log-cache-usage.sh
(+2847 files in other folders)
