[package]
name = "execution_server"
version = "0.0.1"
edition = "2021"
publish = false

[dependencies]
clap = "4"
grpc_util = { path = "../grpc_util" }
hyper = "0.14"
log = "0.4"
metrics = "0.21"
protos = { path = "../protos" }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
execution = { path = "../execution" }
tokio = { version = "1.27", features = ["fs", "macros", "net", "rt-multi-thread", "sync", "time"] }
tower-http = { version = "0.4", features = ["metrics"] }
