[package]
name = "grpc_util"
version = "0.0.1"
edition = "2021"
publish = false

[dependencies]
biscuit = "0.6"
chrono = "0.4"
console-subscriber = "0.1"
futures = "0.3"
ginepro = "0.6"
http-body = "0.4"
hyper = "0.14"
log = "0.4"
metrics = "0.21"
metrics-exporter-prometheus = "0.12"
opentelemetry = { version = "0.17", features = ["rt-tokio"] }
opentelemetry-otlp = "0.10"
pin-project = "1.0"
percent-encoding = "2.2"
rand = "0.8"
sentry = { version = "0.31", default-features = false, features = ["backtrace", "contexts", "panic", "reqwest", "rustls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = "0.24"
strum_macros = "0.24"
tokio = { version = "1.27", features = ["macros", "net", "rt-multi-thread", "signal", "tracing"] }
tonic = { version = "0.9", features = ["transport", "codegen", "tls", "tls-roots"] }
tower = "0.4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.17"
warp = "0.3"

[dev-dependencies]
bytes = "1"
parking_lot = "0.12"
prost = "0.11"
protos = { path = "../protos" }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls-native-roots"] }
