[package]
name = "protos"
version = "0.0.1"
edition = "2021"
publish = false

[dependencies]
bytes = "1.4"
prost = "0.11"
prost-types = "0.11"
tonic = { version = "0.9", features = ["transport", "codegen", "tls", "tls-roots"] }

[build-dependencies]
prost-build = "0.11"
tonic-build = { version = "0.9", features = ["prost"] }
