[package]
name = "proxy_server"
version = "0.0.1"
edition = "2021"
publish = false

[dependencies]
bytes = "1.4"
clap = "4"
futures = "0.3"
grpc_util = { path = "../grpc_util" }
hyper = "0.14"
log = "0.4"
metrics = "0.21"
metrics-exporter-prometheus = "0.12"
parking_lot = "0.12"
protos = { path = "../protos" }
proxy = { path = "../proxy"}
# TODO: Waiting for a release containing https://github.com/durch/rust-s3/pull/321.
rust-s3 = { git = "https://github.com/durch/rust-s3", rev = "8f11bc1e5809011bd829c987744219194d0ee46e", features = ["tokio-rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.27", features = ["fs", "macros", "net", "rt-multi-thread", "sync", "time"] }
tokio-stream = { version = "0.1" }
tonic = { version = "0.9", features = ["transport", "codegen", "tls", "tls-roots"] }
tower-http = { version = "0.4", features = ["metrics"] }
