[package]
name = "storage_server"
version = "0.0.1"
edition = "2021"
publish = false

[dependencies]
async-channel = "1.8.0"
async-trait = "0.1"
bytes = "1.4"
clap = "4"
either = "1"
futures = "0.3"
grpc_util = { path = "../grpc_util" }
hyper = "0.14"
itertools = "0.10.5"
log = "0.4"
metrics = "0.21"
parking_lot = "0.12"
redis = { version = "0.21.5", features = ["tokio-comp", "connection-manager"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
storage = { path = "../storage" }
tokio = { version = "1.27", features = ["fs", "macros", "net", "rt-multi-thread", "sync", "time"] }
tokio-stream = { version = "0.1" }
tonic = { version = "0.9", features = ["transport", "codegen", "tls", "tls-roots"] }
tower = "0.4"
tower-layer = "0.3"
tower-http = { version = "0.4", features = ["metrics"] }
tracing = "0.1"

[dev-dependencies]
env_logger = "0.10"
futures-task = "0.3"
libc = "0.2"
protos = { path = "../protos" }
tempfile = "3"
tokio = { version = "1.27", features = ["fs", "macros", "net", "process", "rt-multi-thread", "sync", "time"] }
regex = "1"

