[package]
name = "worker"
version = "0.0.1"
edition = "2021"
publish = false

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
stderrlog = "0.5"
futures = "0.3"
log = "0.4"
tempfile = "3.5"
tokio = { version = "1.27", features = ["fs", "macros", "process", "rt-multi-thread", "time"] }
uuid = { version = "1.3", features = ["v4", "fast-rng"] }
